<resources>
    <string name="app_name">Calculator</string>
    <string name="enter_your_second_value">Enter Your Second Value</string>
    <string name="enter_your_first_value">Enter Your First Value</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="Multiply">*</string>
    <string name="Divide">/</string>
    <string name="calculatorimage">CalculatorImage</string>
    <string name="string_plus">+</string>
    <string name="splashcalculator">splashcalculator</string>
    <string name="all_right_reserved">All Right Reserved</string>
</resources>