<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/fnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_first_value"
        android:inputType="number"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_second_value"
        android:inputType="number"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/stl"
            android:text="@string/string_plus"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#F57C00" />

        <Button
            android:id="@+id/minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/stl"
            android:text="@string/minus"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#F57C00" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/stl"
            android:text="@string/Multiply"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#F57C00" />

        <Button
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/stl"
            android:text="@string/Divide"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#F57C00" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/calculatorimage"
            app:srcCompat="@drawable/calculator1" />
    </LinearLayout>
</LinearLayout>